// file: pkg/organization/proto/requests/remove_member_request.proto
import "pkg/common/proto/request_metadata.proto";
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

message RemoveMemberRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier
  string organization_id = 2;

  // Member identifier to remove
  string member_id = 3;
}
